# plick-embbeding

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.obsidian/: graph.json  workspace.json
data/: articles.json  articles_detail.json
data/labels/: articles90.json
data/signals/: articles90.json
docs/: AGENT_GUIDE.md  ARCHITECTURE.md  BRIEF.md  CONFLUENCE_UPDATE.md  CONVENTIONS.md  DECISIONS.md  PORTING_GUIDE.md  PROGRESS.md  SPEC.md  pipeline.md
docs/phases/: 01-project-skeleton.md  02-poc-migration.md  03-eval-harness.md  04-llm-wiki.md  05-parallel-experiments.md  06-model-selection.md  07-online-dedup.md  08-ingest-pipeline.md  README.md
scripts/: build_signals.py  compare_grouping.py  experiment_structure.py  fetch_articles.py  fetch_summary_detail.py  run_experiment.py  run_grayzone.py  run_incremental.py  run_pipeline.py  sweep_representative.py  sweep_saga.py  sweep_threshold.py
src/plick_embedding/: judge.py  settings.py
tests/: test_batch.py  test_eval.py  test_gray_zone.py  test_incremental.py  test_partition_clustering.py  test_pipeline.py  test_providers.py  test_report.py  test_settings.py  test_source.py  test_store.py  test_wiki.py
wiki/: 00-INDEX.md  배치_vs_순차_묶기_비교.md  사가_대응_비교.md  순차_묶기_대표값_비교.md  순차_묶기_종합.md  애매한_구간_LLM_판정.md  최종선정_임베딩구성.md  트랙A_Gemini_실험종합.md  트랙B_OpenAI_실험종합.md  트랙비교_Gemini_vs_OpenAI.md
wiki/concepts/: task_type.md  묶기에 쓸 신호와 구조.md  잘못 합침과 사가 분할.md  정답과 얼마나 일치하나 (ARI).md  최근 24시간만 비교.md  회색지대.md
wiki/experiments/: 2026-06-26_published34_CLUSTERING_0.92_24h.md  (+28 more)
(+23 files in other folders)
